tt-web/src/components/footer/Footer.module.css
.background {
    background-color: var(--bg-color);
}

.footer{
    width: 100%;
    background: #272727;
    padding: 0 30px;
    clip-path: polygon(0 8%, 100% 0, 100% 100%, 0% 100%);
}

.containerOne {
    border-bottom: 1px solid #343a40;
    padding: 40px 0;
    margin-bottom: 30px;
}

.containerTwo {
    align-items: flex-start;
    gap: 1rem;
    width: 100%;
    color: #dcdcdd;
}

.column {
    width: 250px;
    color: #dcdcdd;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    flex-direction: column;
    gap: .25rem;
}
.column a {
    text-decoration: none;
    color: #dcdcdd;
    font-size: 14px;
}
.column a:hover {
    color: var(--main-color);
}
.textFinal {
    margin-right: 45px;
    padding: 1.5rem 0;
    color: #dcdcdd;
    font-size: 12px;
    text-align: center;

}
.marca {
    font-weight: bold;
}
.marca:hover {
    color: var(--main-color);
}

@media screen and (max-width: 760px) {
    .containerOne {
        flex-direction: column;
        gap: .75rem;
    }
    .containerTwo {
        flex-wrap: wrap;
    }
}

@media screen and (max-width: 350px) {
    .footer {
        padding-top: 20px;
    }
}

